@@ -1,3 +1,9 @@
+2019-11-08  Ross Kirsling  <ross.kirsling@sony.com>
+
+        [PlayStation][JSC] Unreviewed build fix.
+
+        * shell/playstation/TestShell.cpp:
+
 2019-11-07  Mark Lam  <mark.lam@apple.com>
 
         Add a stack overflow check in Yarr::ByteCompiler::emitDisjunction().
